inca 2 rel si ajunge

--- a/MauiAppBazaSportiva.csproj
+++ b/MauiAppBazaSportiva.csproj
@@ -77,6 +77,9 @@
 	  <MauiXaml Update="MembershipPage.xaml">
 	    <Generator>MSBuild:Compile</Generator>
 	  </MauiXaml>
+	  <MauiXaml Update="ReservationPage.xaml">
+	    <Generator>MSBuild:Compile</Generator>
+	  </MauiXaml>
 	  <MauiXaml Update="TrainerPage.xaml">
 	    <Generator>MSBuild:Compile</Generator>
 	  </MauiXaml>
